--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -25,20 +25,58 @@ block inlineScripts
 			getListFromServer('');
 		}
 
-		$(document).ready(function() {
+		var getDataWithPayload = function(payload) {
 			$('#fabContainer').html("<img src='/public/ajax-loader.gif' />");
 			$('#fapContainer').html("<img src='/public/ajax-loader.gif' />");
-
-			$.get('/api/players/freeAgents', function(result) {
+			$.post('/api/players/screen', payload, function(result) {
 				$("#fabContainer").html(result.batterHtml);
 				$("#fapContainer").html(result.pitcherHtml);
 
-				var options = { widgetOptions: { stickyHeaders : '', stickyHeaders_attachTo : '.widget' }};
+				var options = { 
+					widgetOptions : { stickyHeaders : '', stickyHeaders_attachTo : '.widget' },
+					sortList : [[2,1],[0,1],[1,1],[3,1]]
+				};
 				$("#freeAgentBatters").tablesorter(options); 
-				$("#freeAgentPitchers").tablesorter(options); 
-			})
+				$("#freeAgentPitchers").tablesorter(options);
+			});
+		}
+
+		$(document).ready(function() {
+
+			$('#battersTab').on('click', function() {
+				$('.posCb').show();
+			});
+
+			$('#pitchersTab').on('click', function() {
+				$('.posCb').hide();
+			});
+
+			$('#screenButton').on('click', function(event) {
+				var payload = {};
+				payload.forceStats = true;
+				if($("#facb").is(':checked')) {
+					payload.fantasy_team = 0;
+				}
+				var positions = [];
+				$('.posCb:checked').each(function(index, cb) {
+					$(cb).val().split(',').forEach(function(pos) {
+						positions.push(pos);
+					});
+				});
+				payload.positions = positions;
+				console.log(payload);
+				getDataWithPayload(payload);
+			});
+
+			getDataWithPayload({ fantasy_team : 0, forceStats: true });
 
 			$('#tabs').tabs();
+
+			$("#ariLink").click(function() { 
+				var sorting = [[1,1]];
+				$("#freeAgentBatters").trigger("sorton",[sorting]); 
+				return false; 
+			});
 		});
 
 block content
@@ -46,25 +84,39 @@ block content
 	section(id="top")
 		span#pageTitle Players
 	section(id="left" style="width:100%")
+		p#ariLink= "ari"
 		div#tabs(style="width:67%;display:inline-block;vertical-align:top")
 			ul
 				li(style="display: table-cell;padding:5px")
-					a.hiddenLink(href="#batters") Batters
+					a#battersTab.hiddenLink(href="#batters") Batters
 				li(style="display: table-cell;padding:5px")
-					a.hiddenLink(href="#pitchers") Pitchers
+					a#pitchersTab.hiddenLink(href="#pitchers") Pitchers
 			
 			label(for="facb") Free Agents
-			input#facb(type="checkbox" onclick="alert('hi')")
+			input#facb(type="checkbox" checked="checked")
+			label.posCb(for="catcher_cb") Catch
+			input.posCb#catcher_cb(type="checkbox" checked="checked" value="2")
+			label.posCb(for="first_cb") First Base
+			input.posCb#first_cb(type="checkbox" checked="checked" value="3")
+			label.posCb(for="second_cb") Second Base
+			input.posCb#second_cb(type="checkbox" checked="checked" value="4")
+			label.posCb(for="third_cb") Third Base
+			input.posCb#third_cb(type="checkbox" checked="checked" value="5")
+			label.posCb(for="short_facb") Shortstop
+			input.posCb#short_facb(type="checkbox" checked="checked" value="6")
+			label.posCb(for="of_facb") Outfielder
+			input.posCb#of_facb(type="checkbox" checked="checked" value="7,8,9")
+			input#screenButton(type="button" value="Go!")
 
 			div#batters(style="vertical-align:top")
 				div.widget
-					h2 Free Agent Batters - 2014 Stats
+					h2 Batters - 2014 Stats
 					p (Hint: Click Column Header to Sort)
 					div#fabContainer(style="max-height:500px;overflow-y:scroll;")
 						
 			div#pitchers(style="vertical-align:top")
 				div.widget
-					h2 Free Agent Pitchers - 2014 Stats
+					h2 Pitchers - 2014 Stats
 					p (Hint: Click Column Header to Sort)
 					div#fapContainer(style="max-height:500px;overflow-y:scroll;")
 
