--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -38,6 +38,22 @@ block inlineScripts
 				};
 				$("#freeAgentBatters").tablesorter(options); 
 				$("#freeAgentPitchers").tablesorter(options);
+
+				var categories = [
+					{ id : "AB", column : 1, descending: 1 },
+					{ id : "HR", column : 2, descending: 1 },
+					{ id : "R", column : 3, descending: 1 },
+					{ id : "RBI", column : 4, descending: 1 },
+					{ id : "SB", column : 5, descending: 1 },
+					{ id : "OBP", column : 6, descending: 1 },
+				];
+				categories.forEach(function(c) {
+					$("#cat_" + c.id).click(function() { 
+						var sorting = [[c.column, c.descending]];
+						$("#freeAgentBatters").trigger("sorton",[sorting]); 
+						return false; 
+					});
+				});
 			});
 		}
 
@@ -71,12 +87,6 @@ block inlineScripts
 			getDataWithPayload({ fantasy_team : 0, forceStats: true });
 
 			$('#tabs').tabs();
-
-			$("#ariLink").click(function() { 
-				var sorting = [[1,1]];
-				$("#freeAgentBatters").trigger("sorton",[sorting]); 
-				return false; 
-			});
 		});
 
 block content
@@ -112,8 +122,7 @@ block content
 				div.widget
 					h2 Batters - 2014 Stats
 					p (Hint: Click Column Header to Sort)
-					div#fabContainer(style="max-height:500px;overflow-y:scroll;")
-						
+					div#fabContainer
 			div#pitchers(style="vertical-align:top")
 				div.widget
 					h2 Pitchers - 2014 Stats
