--- a/views/partials/freeAgentTable.jade
+++ b/views/partials/freeAgentTable.jade
@@ -1,58 +1,77 @@
 mixin playerTable(players, _isHitter)
 	- var tableId = _isHitter ? 'freeAgentBatters' : 'freeAgentPitchers';
-	table(id=tableId style="width:100%")
+	-var batterCategories = [ { categoryName : 'Name', categoryId : 'bName', width: '20%' } ];
+	-batterCategories.push({ categoryName : 'AB' , width : '10%' });
+	-batterCategories.push({ categoryName : 'HR' , width : '10%' });
+	-batterCategories.push({ categoryName : 'R' , width : '10%' });
+	-batterCategories.push({ categoryName : 'RBI' , width : '20%' });
+	-batterCategories.push({ categoryName : 'SB' , width : '20%' });
+	-batterCategories.push({ categoryName : 'OBP' , width : '10%' });
+	table(style="width:100%")
 		-if(_isHitter)
 			thead
-				th Name
-				th AB
-				th HR
-				th R
-				th RBI
-				th SB
-				th OBP
+				-each category in batterCategories
+					-var id = category.categoryId ? category.categoryId : category.categoryName;
+					th(id="cat_" + id style="width:"+category.width)= category.categoryName
 		-else
 			thead
-				th Name
-				th IP
-				th K
-				th WHIP
-				th ERA
-				th W
-				th SV
-		tbody
-			-each player in players
-				tr
-					td
-						a.name(href="/player/"+player._id)= player.name_display_first_last
-					-if(player.stats[0])
-						-if(_isHitter)
-							td= player.stats[0].ab
-							td= player.stats[0].hr
-							td= player.stats[0].r
-							td= player.stats[0].rbi
-							td= player.stats[0].sb
-							td
-								-if(player.stats[0].obp)
-									-var formatString = ".000";
-									-if(player.stats[0].obp == 1)
-										-formatString = "0.000";
-									= numeral(player.stats[0].obp).format(formatString)
-								-else
-									= "-"
-						-else
-							td= player.stats[0].ip
-							td= player.stats[0].so
-							td
-								-if(player.stats[0].whip)
-									= numeral(player.stats[0].whip).format("0.00")
-								-else
-									= "-"
-							td
-								-if(player.stats[0].era)
-									= numeral(player.stats[0].era).format("0.00")
-								-else
-									= "-"
-							td= player.stats[0].w
-							td= player.stats[0].sv
+				th#cat_pName Name
+				th#cat_ip IP
+				th#cat_k K
+				th#cat_whip WHIP
+				th#cat_era ERA
+				th#cat_w W
+				th#cat_sv SV
+
+	div(style="max-height:500px;overflow-y:scroll;")
+		table(id=tableId style="width:100%")
+			-if(_isHitter)
+				thead(style="display:none")
+					-each category in batterCategories
+						th(style="width:"+category.width)= category.categoryName
+			-else
+				thead(style="display:none")
+					th Name
+					th IP
+					th K
+					th WHIP
+					th ERA
+					th W
+					th SV
+			tbody
+				-each player in players
+					tr
+						td(style="width:20%")
+							a.name(href="/player/"+player._id)= player.name_display_first_last
+						-if(player.stats[0])
+							-if(_isHitter)
+								td(style="width:10%")= player.stats[0].ab
+								td(style="width:10%")= player.stats[0].hr
+								td(style="width:10%")= player.stats[0].r
+								td(style="width:20%")= player.stats[0].rbi
+								td(style="width:20%")= player.stats[0].sb
+								td(style="width:10%")
+									-if(player.stats[0].obp)
+										-var formatString = ".000";
+										-if(player.stats[0].obp == 1)
+											-formatString = "0.000";
+										= numeral(player.stats[0].obp).format(formatString)
+									-else
+										= "-"
+							-else
+								td= player.stats[0].ip
+								td= player.stats[0].so
+								td
+									-if(player.stats[0].whip)
+										= numeral(player.stats[0].whip).format("0.00")
+									-else
+										= "-"
+								td
+									-if(player.stats[0].era)
+										= numeral(player.stats[0].era).format("0.00")
+									-else
+										= "-"
+								td= player.stats[0].w
+								td= player.stats[0].sv
 
 mixin playerTable(dbPlayers, isHitter)
