--- a/views/partials/freeAgentTable.jade
+++ b/views/partials/freeAgentTable.jade
@@ -1,57 +1,59 @@
 mixin playerTable(players, _isHitter)
 	- var tableId = _isHitter ? 'freeAgentBatters' : 'freeAgentPitchers';
-	-var batterCategories = [ { categoryName : 'Name', categoryId : 'bName', width: '20%' } ];
+
+	-var batterCategories = [ { categoryName : 'Name', categoryId : 'bName', width: '40%' } ];
 	-batterCategories.push({ categoryName : 'AB' , width : '10%' });
 	-batterCategories.push({ categoryName : 'HR' , width : '10%' });
 	-batterCategories.push({ categoryName : 'R' , width : '10%' });
-	-batterCategories.push({ categoryName : 'RBI' , width : '20%' });
-	-batterCategories.push({ categoryName : 'SB' , width : '20%' });
+	-batterCategories.push({ categoryName : 'RBI' , width : '10%' });
+	-batterCategories.push({ categoryName : 'SB' , width : '10%' });
 	-batterCategories.push({ categoryName : 'OBP' , width : '10%' });
+
+	-var pitcherCategories = [ { categoryName : 'Name', categoryId : 'pName', width: '40%' } ];
+	-pitcherCategories.push({ categoryName : 'IP' , width : '10%' });
+	-pitcherCategories.push({ categoryName : 'K' , width : '10%' });
+	-pitcherCategories.push({ categoryName : 'WHIP' , width : '10%' });
+	-pitcherCategories.push({ categoryName : 'ERA' , width : '10%' });
+	-pitcherCategories.push({ categoryName : 'W' , width : '10%' });
+	-pitcherCategories.push({ categoryName : 'SV' , width : '10%' });
+
 	table(style="width:100%")
-		-if(_isHitter)
-			thead
+		thead
+			-if(_isHitter)
 				-each category in batterCategories
 					-var id = category.categoryId ? category.categoryId : category.categoryName;
-					th(id="cat_" + id style="width:"+category.width)= category.categoryName
-		-else
-			thead
-				th#cat_pName Name
-				th#cat_ip IP
-				th#cat_k K
-				th#cat_whip WHIP
-				th#cat_era ERA
-				th#cat_w W
-				th#cat_sv SV
+					th(id="cat_" + id style="width:"+category.width)
+						span= category.categoryName
+			-else
+				-each category in pitcherCategories
+					-var id = category.categoryId ? category.categoryId : category.categoryName;
+					th(id="cat_" + id style="width:"+category.width)
+						span= category.categoryName
 
 	div(style="max-height:500px;overflow-y:scroll;")
-		table(id=tableId style="width:100%")
-			-if(_isHitter)
-				thead(style="display:none")
+		table.faTable.hoverable(id=tableId style="width:100%")
+			thead(style="display:none")
+				-if(_isHitter)
 					-each category in batterCategories
 						th(style="width:"+category.width)= category.categoryName
-			-else
-				thead(style="display:none")
-					th Name
-					th IP
-					th K
-					th WHIP
-					th ERA
-					th W
-					th SV
+				-else
+					-each category in pitcherCategories
+						th(style="width:"+category.width)= category.categoryName
+
 			tbody
 				-each player in players
 					tr
-						td(style="width:20%")
+						td(style="width:40%")
 							a.name(href="/player/"+player._id)= player.name_display_first_last
 						-if(player.stats[0])
 							-if(_isHitter)
 								td(style="width:10%")= player.stats[0].ab
 								td(style="width:10%")= player.stats[0].hr
 								td(style="width:10%")= player.stats[0].r
-								td(style="width:20%")= player.stats[0].rbi
-								td(style="width:20%")= player.stats[0].sb
+								td(style="width:10%")= player.stats[0].rbi
+								td(style="width:10%")= player.stats[0].sb
 								td(style="width:10%")
-									-if(player.stats[0].obp)
+									-if(player.stats[0].obp >= 0)
 										-var formatString = ".000";
 										-if(player.stats[0].obp == 1)
 											-formatString = "0.000";
@@ -59,19 +61,19 @@ mixin playerTable(players, _isHitter)
 									-else
 										= "-"
 							-else
-								td= player.stats[0].ip
-								td= player.stats[0].so
-								td
-									-if(player.stats[0].whip)
+								td(style="width:10%")= player.stats[0].ip
+								td(style="width:10%")= player.stats[0].so
+								td(style="width:10%")
+									-if(player.stats[0].whip >= 0)
 										= numeral(player.stats[0].whip).format("0.00")
 									-else
 										= "-"
-								td
-									-if(player.stats[0].era)
+								td(style="width:10%")
+									-if(player.stats[0].era >= 0)
 										= numeral(player.stats[0].era).format("0.00")
 									-else
 										= "-"
-								td= player.stats[0].w
-								td= player.stats[0].sv
+								td(style="width:10%")= player.stats[0].w
+								td(style="width:10%")= player.stats[0].sv
 
 mixin playerTable(dbPlayers, isHitter)
