--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -2,8 +2,18 @@ extends layout
 
 block inlineScripts
 	script.
-		var lastSearchTerm;
 
+		//START
+		//Helper
+		var showLoader = function(objId) {
+			$('#' + objId).html("<img src='/public/ajax-loader.gif' />");
+		}
+		//Helper
+		//END
+
+		//START
+		//Search By Name
+		var lastSearchTerm;
 		var getListFromServer = function(text) {
 			lastSearchTerm = text;
 			var payload = { text : text };
@@ -13,80 +23,213 @@ block inlineScripts
 				}
 			});
 		}
-
 		var textboxChanged = function(textbox) {
-			$('#playerList').html("<img src='/public/ajax-loader.gif' />");
+			showLoader('playerList');
 			var text = $(textbox).val();
 			getListFromServer(text);
 		}
-
 		var showAllPlayers = function() {
-			$('#playerList').html("<img src='/public/ajax-loader.gif' />");
+			showLoader('playerList');
 			getListFromServer('');
 		}
+		//Search By Name
+		//END
 
+		//START
+		//Grid
+
+		var setupTablesorter = function() {
+			$.tablesorter.addParser({ 
+				id: 'zeroReplaceHigh', 
+				is: function(s) { 
+					return false; 
+				},
+				format: function(s) {
+					return s.replace(/-/,10000);
+				},
+				type: 'numeric'
+			});
+			$.tablesorter.addParser({ 
+				id: 'zeroReplaceLow', 
+				is: function(s) { 
+					return false; 
+				},
+				format: function(s) {
+					return s.replace(/-/,-10000);
+				},
+				type: 'numeric'
+			});
+
+			$("#freeAgentBatters").tablesorter({
+				headers : {
+					6 : {
+						sorter : 'zeroReplaceLow'
+					}
+				}
+			}); 
+			$("#freeAgentPitchers").tablesorter({
+				headers : {
+					3 : {
+						sorter : 'zeroReplaceHigh'
+					},
+					4: {
+						sorter : 'zeroReplaceHigh'
+					}
+				}
+			});
+		}
+		
 		var getDataWithPayload = function(payload) {
-			$('#fabContainer').html("<img src='/public/ajax-loader.gif' />");
-			$('#fapContainer').html("<img src='/public/ajax-loader.gif' />");
+			showLoader('fabContainer');
+			showLoader('fapContainer');
+
 			$.post('/api/players/screen', payload, function(result) {
 				$("#fabContainer").html(result.batterHtml);
 				$("#fapContainer").html(result.pitcherHtml);
 
-				var options = { 
-					widgetOptions : { stickyHeaders : '', stickyHeaders_attachTo : '.widget' },
-					sortList : [[2,1],[0,1],[1,1],[3,1]]
-				};
-				$("#freeAgentBatters").tablesorter(options); 
-				$("#freeAgentPitchers").tablesorter(options);
+				setupTablesorter();
 
 				var categories = [
+					{ id : "bName", column : 0, descending: 0 },
 					{ id : "AB", column : 1, descending: 1 },
 					{ id : "HR", column : 2, descending: 1 },
 					{ id : "R", column : 3, descending: 1 },
 					{ id : "RBI", column : 4, descending: 1 },
 					{ id : "SB", column : 5, descending: 1 },
 					{ id : "OBP", column : 6, descending: 1 },
+					
+					{ id : "pName", column : 0, descending: 0 },
+					{ id : "IP", column : 1, descending: 1 },
+					{ id : "K", column : 2, descending: 1 },
+					{ id : "WHIP", column : 3, descending: 0 },
+					{ id : "ERA", column : 4, descending: 0 },
+					{ id : "W", column : 5, descending: 1 },
+					{ id : "SV", column : 6, descending: 1 }
 				];
+
 				categories.forEach(function(c) {
-					$("#cat_" + c.id).click(function() { 
+					$("#cat_" + c.id + " span").click(function() { 
 						var sorting = [[c.column, c.descending]];
-						$("#freeAgentBatters").trigger("sorton",[sorting]); 
+						$("#freeAgent" + payload.id).trigger("sorton",[sorting]);
 						return false; 
 					});
 				});
+
 			});
+		}
+
+		var initPayload = function() {
+			var payload = {};
+			payload.forceStats = true;
+			if($("#facb").is(':checked')) {
+				payload.fantasy_team = 0;
+			}
+			return payload;
+		}
+
+		var addCategories = function(payload) {
+			var categories = $('[id^="categorySelect_"]:visible');
+			var legalCategories = true;
+
+			categories.each(function(index, cat) {
+				var category = {}
+				category.name = $(cat).find('select[name="category"]').val();
+				category.gtLt = $(cat).find('select[name="gtLt"]').val();
+				var value = $(cat).find('input').val();
+				if(!category.name || !category.gtLt || !value || isNaN(value)) {
+					legalCategories = false;
+				}
+				category.value = value;
+				if(!payload.categories) {
+					payload.categories = [];
+				}
+				payload.categories.push(category);
+			});
+			if(!legalCategories) {
+				alert("One or more categories is illegal. Please fix before continuing");
+				return;
+			}
+
+			console.log(payload);
+			getDataWithPayload(payload);
+		}
+
+		var filterPitcherData = function() {
+			var payload = initPayload();
+			payload.positions = [1];
+			payload.id = 'Pitchers';
+			payload = addCategories(payload);
+		}
+
+		var filterBatterData = function() {
+			var payload = initPayload();
+			var positions = [];
+			$('.posCb:checked').each(function(index, cb) {
+				$(cb).val().split(',').forEach(function(pos) {
+					positions.push(pos);
+				});
+			});
+			payload.positions = positions;
+			payload.id = 'Batters';
+			payload = addCategories(payload);
 		}
 
 		$(document).ready(function() {
 
 			$('#battersTab').on('click', function() {
-				$('.posCb').show();
+				$('#batterCategories').show();
+				$('#pitcherCategories').hide();
+
+				$('#batterFilters').show();
+
+				filterBatterData();
 			});
 
 			$('#pitchersTab').on('click', function() {
-				$('.posCb').hide();
+				$('#pitcherCategories').show();
+				$('#batterCategories').hide();
+
+				$('#batterFilters').hide();
+
+				filterPitcherData();
 			});
 
-			$('#screenButton').on('click', function(event) {
-				var payload = {};
-				payload.forceStats = true;
-				if($("#facb").is(':checked')) {
-					payload.fantasy_team = 0;
-				}
-				var positions = [];
-				$('.posCb:checked').each(function(index, cb) {
-					$(cb).val().split(',').forEach(function(pos) {
-						positions.push(pos);
-					});
-				});
-				payload.positions = positions;
-				console.log(payload);
-				getDataWithPayload(payload);
+			$('#screenBatterButton').on('click', function() {
+				filterBatterData();
 			});
 
-			getDataWithPayload({ fantasy_team : 0, forceStats: true });
+			$('#screenPitcherButton').on('click', function() {
+				filterPitcherData();
+			});
+
+			getDataWithPayload({ fantasy_team : 0, forceStats: true, id: 'Batters' });
 
 			$('#tabs').tabs();
+
+			var categoryButtonCount = 0;
+			$('#addBatterCategories').on('click', function() {
+				var newSelect = $('#batterCategories #dummy').clone();
+				newSelect.css('display','block');
+				newSelect.attr('id', 'categorySelect_' + categoryButtonCount);
+				categoryButtonCount++;
+				$('#addBatterCategories').after(newSelect);
+				$(newSelect).find('input:button').on('click', function(event) {
+					$(event.target).parent().remove();
+				});
+			});
+			$('#addPitcherCategories').on('click', function() {
+				var newSelect = $('#pitcherCategories #dummy').clone();
+				newSelect.css('display','block');
+				newSelect.attr('id', 'categorySelect_' + categoryButtonCount);
+				categoryButtonCount++;
+				$('#addPitcherCategories').after(newSelect);
+				$(newSelect).find('input:button').on('click', function(event) {
+					$(event.target).parent().remove();
+				});
+			});
+
+			$('#batterCategories').show();
+			$('#pitcherCategories').hide();
 		});
 
 block content
@@ -94,40 +237,66 @@ block content
 	section(id="top")
 		span#pageTitle Players
 	section(id="left" style="width:100%")
-		p#ariLink= "ari"
-		div#tabs(style="width:67%;display:inline-block;vertical-align:top")
-			ul
-				li(style="display: table-cell;padding:5px")
-					a#battersTab.hiddenLink(href="#batters") Batters
-				li(style="display: table-cell;padding:5px")
-					a#pitchersTab.hiddenLink(href="#pitchers") Pitchers
-			
-			label(for="facb") Free Agents
-			input#facb(type="checkbox" checked="checked")
-			label.posCb(for="catcher_cb") Catch
-			input.posCb#catcher_cb(type="checkbox" checked="checked" value="2")
-			label.posCb(for="first_cb") First Base
-			input.posCb#first_cb(type="checkbox" checked="checked" value="3")
-			label.posCb(for="second_cb") Second Base
-			input.posCb#second_cb(type="checkbox" checked="checked" value="4")
-			label.posCb(for="third_cb") Third Base
-			input.posCb#third_cb(type="checkbox" checked="checked" value="5")
-			label.posCb(for="short_facb") Shortstop
-			input.posCb#short_facb(type="checkbox" checked="checked" value="6")
-			label.posCb(for="of_facb") Outfielder
-			input.posCb#of_facb(type="checkbox" checked="checked" value="7,8,9")
-			input#screenButton(type="button" value="Go!")
+		div(style="width:67%;display:inline-block;vertical-align:top")
+			div.widget
+				div#tabs
+					ul(style="-webkit-padding-start: 0px;")
+						li(style="display:table-cell;font-size:30px;padding-right:30px")
+							div
+								a#battersTab.hiddenLink(href="#batters") Batters
+						li(style="display:table-cell;font-size:30px")
+							div
+								a#pitchersTab.hiddenLink(href="#pitchers") Pitchers
+					h3 Filters
+					
+					//Filter Buttons
+					mixin filterButton(id, text, value)
+						div(style="display:inline-block;width:16.667%")
+							label.posCb(for=id style="width:80%")= text
+							input.posCb(id=id type="checkbox" checked="checked" value=value)
 
-			div#batters(style="vertical-align:top")
-				div.widget
-					h2 Batters - 2014 Stats
-					p (Hint: Click Column Header to Sort)
-					div#fabContainer
-			div#pitchers(style="vertical-align:top")
-				div.widget
-					h2 Pitchers - 2014 Stats
-					p (Hint: Click Column Header to Sort)
-					div#fapContainer(style="max-height:500px;overflow-y:scroll;")
+					label(for="facb") Free Agents
+					input#facb(type="checkbox" checked="checked")
+					div#batterFilters(style="width:100%")
+						mixin filterButton("catcher_cb", "Catcher", 2)
+						mixin filterButton("first_cb", "First Base", 3)
+						mixin filterButton("second_cb", "Second Base", 4)
+						mixin filterButton("third_cb", "Third Base", 5)
+						mixin filterButton("shortstop_cb", "Shortstop", 6)
+						mixin filterButton("outfielder_cb", "Outfielder", "7,8,9")
+
+					//Filter Categories
+					mixin categorySelect(categories)
+						div#dummy(style="display:none")
+							select(name="category")
+								option
+								-each c in categories
+									-var value = c.toLowerCase();
+									option(value=value)= c
+							select(name="gtLt")
+								option
+								option(value="1") >=
+								option(value="0") =<
+							input(type="number")
+							input(type="button" value="Remove Stat Filter")
+
+					div#batterCategories(style="width:100%")
+						-var categories = ['AB','HR','R','RBI','SB','OBP'];
+						input#addBatterCategories(type="button" value="Add Stat Filter")
+						mixin categorySelect(categories)
+						div
+							input#screenBatterButton(type="button" value="Go!")
+					div#pitcherCategories(style="width:100%")
+						-var categories = ['IP','SO','WHIP','ERA','W','SV'];
+						input#addPitcherCategories(type="button" value="Add Stat Filter")
+						mixin categorySelect(categories)
+						div
+							input#screenPitcherButton(type="button" value="Go!")
+
+					div#batters(style="vertical-align:top")
+						div#fabContainer
+					div#pitchers(style="vertical-align:top")
+						div#fapContainer
 
 		div(style="width:33%;display:inline-block;vertical-align:top")
 			div.widget
