--- a/views/team.jade
+++ b/views/team.jade
@@ -110,7 +110,7 @@ block content
 					| Previous Rosters: 
 					a(style="padding-left:15px" href="/team/" + team.teamId + "/2013") 2013
 
-	section(id="left" style="width:65%")
+	section(id="left" style="width:55%")
 		-var nextYear = parseInt(config.year) + 1
 		-var displayConfig = {};
 
@@ -118,12 +118,6 @@ block content
 		-displayConfig.showFutureSalary = config.isKeeperPeriod;
 		-displayConfig.showStatus = !config.isKeeperPeriod && !config.isOffseason;
 		-displayConfig.showDemoteButton = false;
-
-		div.widget
-			h2 Minor Leaguers
-			mixin minorLeaguers(players, team, config, displayConfig)
-			p
-				i.smallNote * Vulture Threshhold: 150 AB / 50 IP
 
 		div.widget
 			-if(config.isKeeperPeriod && config.isTeamOwner)
@@ -145,7 +139,7 @@ block content
 				mixin vulture(in_vultures, "Vultures on " + team.fullName + "'s Players", true)
 				mixin vulture(out_vultures, "Vultures made by " + team.fullName, false)
 
-	section(id="right")
+	section(id="right" style="width:45%")
 		div.widget
 			h2 Actions
 			-if(user && user.team != team.teamId && (config.isTradingOn || user.role == 'admin'))
@@ -153,10 +147,18 @@ block content
 				br
 			a(target="_blank" href="http://games.espn.go.com/flb/clubhouse?leagueId=216011&teamId=" + team.teamId + "&seasonId=2014")
 				| Go To ESPN Team Page
-		div.widget
-			h2 Finances
-			mixin cash(team, cash, config)
 
 		div.widget
-			h2 Minor League Draft Picks
-			mixin draftPicks(team, picks, teamHash)
+			h2 Minor Leaguers
+			mixin minorLeaguers(players, team, config, displayConfig)
+			p
+				i.smallNote * Vulture Threshhold: 150 AB / 50 IP
+
+		div(style="width:50%;display:inline-block;vertical-align:top")
+			div.widget
+				h2 Finances
+				mixin cash(team, cash, config)
+		div(style="width:50%;display:inline-block;vertical-align:top")
+			div.widget
+				h2 Minor League Draft Picks
+				mixin draftPicks(team, picks, teamHash)
