--- a/views/player.jade
+++ b/views/player.jade
@@ -77,12 +77,12 @@ block content
 				thead
 					th Year
 					-if(isHitter)
+						th AB
+						th HR
 						th R
 						th RBI
-						th HR
 						th SB
 						th OBP
-						th AB
 					-else
 						th W
 						th K
@@ -95,12 +95,19 @@ block content
 							tr
 								td= stat.year
 								-if(isHitter)
+									td= stat.ab
+									td= stat.hr
 									td= stat.r
 									td= stat.rbi
-									td= stat.hr
 									td= stat.sb
-									td= stat.obp
-									td= stat.ab
+									td
+										-if(stat.obp >= 0)
+											-var formatString = ".000";
+											-if(stat.obp == 1)
+												-formatString = "0.000";
+											= numeral(stat.obp).format(formatString)
+										-else
+											= "-"
 								-else
 									td= stat.w
 									td= stat.so
