--- a/views/trade.jade
+++ b/views/trade.jade
@@ -57,33 +57,33 @@ block content
 
 		div.widget
 			h2 Propose a New Trade
-			table
+			table(style="width:100%;text-align:center")
 				tr
 					td
-						a.hiddenLink(href="/trade/" + teams[1].teamId)= teams[1].fullName
+						a.hiddenLink(href="/trade/" + teamHash[1].teamId)= teamHash[1].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[2].teamId)= teams[2].fullName
+						a.hiddenLink(href="/trade/" + teamHash[2].teamId)= teamHash[2].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[3].teamId)= teams[3].fullName
+						a.hiddenLink(href="/trade/" + teamHash[3].teamId)= teamHash[3].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[4].teamId)= teams[4].fullName
+						a.hiddenLink(href="/trade/" + teamHash[4].teamId)= teamHash[4].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[5].teamId)= teams[5].fullName
+						a.hiddenLink(href="/trade/" + teamHash[5].teamId)= teamHash[5].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[6].teamId)= teams[6].fullName
+						a.hiddenLink(href="/trade/" + teamHash[6].teamId)= teamHash[6].fullName
 				tr
 					td
-						a.hiddenLink(href="/trade/" + teams[7].teamId)= teams[7].fullName
+						a.hiddenLink(href="/trade/" + teamHash[7].teamId)= teamHash[7].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[8].teamId)= teams[8].fullName
+						a.hiddenLink(href="/trade/" + teamHash[8].teamId)= teamHash[8].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[9].teamId)= teams[9].fullName
+						a.hiddenLink(href="/trade/" + teamHash[9].teamId)= teamHash[9].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[10].teamId)= teams[10].fullName
+						a.hiddenLink(href="/trade/" + teamHash[10].teamId)= teamHash[10].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[11].teamId)= teams[11].fullName
+						a.hiddenLink(href="/trade/" + teamHash[11].teamId)= teamHash[11].fullName
 					td
-						a.hiddenLink(href="/trade/" + teams[12].teamId)= teams[12].fullName
+						a.hiddenLink(href="/trade/" + teamHash[12].teamId)= teamHash[12].fullName
 
 		div.widget
 			h2 Proposed Trades
