--- a/views/partials/freeAgentTable.jade
+++ b/views/partials/freeAgentTable.jade
@@ -1,7 +1,7 @@
 mixin playerTable(players, _isHitter)
 	- var tableId = _isHitter ? 'freeAgentBatters' : 'freeAgentPitchers';
 
-	-var batterCategories = [ { categoryName : 'Name', categoryId : 'bName', width: '40%' } ];
+	-var batterCategories = [];
 	-batterCategories.push({ categoryName : 'AB' , width : '10%' });
 	-batterCategories.push({ categoryName : 'HR' , width : '10%' });
 	-batterCategories.push({ categoryName : 'R' , width : '10%' });
@@ -9,7 +9,7 @@ mixin playerTable(players, _isHitter)
 	-batterCategories.push({ categoryName : 'SB' , width : '10%' });
 	-batterCategories.push({ categoryName : 'OBP' , width : '10%' });
 
-	-var pitcherCategories = [ { categoryName : 'Name', categoryId : 'pName', width: '40%' } ];
+	-var pitcherCategories = [];
 	-pitcherCategories.push({ categoryName : 'IP' , width : '10%' });
 	-pitcherCategories.push({ categoryName : 'K' , width : '10%' });
 	-pitcherCategories.push({ categoryName : 'WHIP' , width : '10%' });
@@ -20,14 +20,16 @@ mixin playerTable(players, _isHitter)
 	table(style="width:100%")
 		thead
 			-if(_isHitter)
+				th(id="cat_pName" style="width:40%;text-align:left") Name
 				-each category in batterCategories
 					-var id = category.categoryId ? category.categoryId : category.categoryName;
-					th(id="cat_" + id style="width:"+category.width)
+					th.stats(id="cat_" + id style="width:"+category.width)
 						span= category.categoryName
 			-else
+				th(id="cat_bName" style="width:40%;text-align:left") Name
 				-each category in pitcherCategories
 					-var id = category.categoryId ? category.categoryId : category.categoryName;
-					th(id="cat_" + id style="width:"+category.width)
+					th.stats(id="cat_" + id style="width:"+category.width)
 						span= category.categoryName
 
 	div(style="max-height:500px;overflow-y:scroll;")
@@ -47,12 +49,12 @@ mixin playerTable(players, _isHitter)
 							a.name(href="/player/"+player._id)= player.name_display_first_last
 						-if(player.stats[0])
 							-if(_isHitter)
-								td(style="width:10%")= player.stats[0].ab
-								td(style="width:10%")= player.stats[0].hr
-								td(style="width:10%")= player.stats[0].r
-								td(style="width:10%")= player.stats[0].rbi
-								td(style="width:10%")= player.stats[0].sb
-								td(style="width:10%")
+								td.stats(style="width:10%")= player.stats[0].ab
+								td.stats(style="width:10%")= player.stats[0].hr
+								td.stats(style="width:10%")= player.stats[0].r
+								td.stats(style="width:10%")= player.stats[0].rbi
+								td.stats(style="width:10%")= player.stats[0].sb
+								td.stats(style="width:10%")
 									-if(player.stats[0].obp >= 0)
 										-var formatString = ".000";
 										-if(player.stats[0].obp == 1)
@@ -61,19 +63,19 @@ mixin playerTable(players, _isHitter)
 									-else
 										= "-"
 							-else
-								td(style="width:10%")= player.stats[0].ip
-								td(style="width:10%")= player.stats[0].so
-								td(style="width:10%")
+								td.stats(style="width:10%")= player.stats[0].ip
+								td.stats(style="width:10%")= player.stats[0].so
+								td.stats(style="width:10%")
 									-if(player.stats[0].whip >= 0)
 										= numeral(player.stats[0].whip).format("0.00")
 									-else
 										= "-"
-								td(style="width:10%")
+								td.stats(style="width:10%")
 									-if(player.stats[0].era >= 0)
 										= numeral(player.stats[0].era).format("0.00")
 									-else
 										= "-"
-								td(style="width:10%")= player.stats[0].w
-								td(style="width:10%")= player.stats[0].sv
+								td.stats(style="width:10%")= player.stats[0].w
+								td.stats(style="width:10%")= player.stats[0].sv
 
 mixin playerTable(dbPlayers, isHitter)
